monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4007/A4007.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4007;

grammar A4007 extends de.monticore.grammar.cocos.invalid.A4007.A4007 {

  interface ReturnType;

}
